--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "connect-flash": "^0.1.1",
+    "cookieparser": "^0.1.0",
     "express": "^4.13.4",
     "mongodb": "^2.1.18",
     "mongoose": "^4.4.16",
