--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "Jordan Braginton and Teancum Besendorfer",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "latest",
     "body-parser": "^1.15.1",
     "connect-flash": "^0.1.1",
     "cookieparser": "^0.1.0",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "mongodb": "^2.1.18",
     "mongoose": "^4.4.16",
     "morgan": "^1.7.0",
